--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,12 +1,11 @@
 Options +FollowSymLinks
+IndexIgnore */*
+
 RewriteEngine on
 
-#RewriteCond %{HTTPS} off
-#RewriteRule .* https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-#RewriteCond %{HTTP_HOST} !^www\.
-#RewriteRule .* https://www.%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
-# If a directory or a file exists, use the request directly
+# if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-# Otherwise forward the request to index.php
+
+# otherwise forward it to index.php
 RewriteRule . index.php
